<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HolaMundo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="iconoprueba">Prueba</string>
    <string name="title_activity_lista_allumnos">ListaAllumnos</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="nombre">Nombre:</string>
    <string name="site">Site:</string>
    <string name="direccion">Direccion:</string>
    <string name="telefono">Telefono:</string>
    <string name="nota">Nota:</string>
    <string name="grabar">Grabar</string>
    <string name="foto">Foto</string>
    <string name="title_activity_pruebas">PruebasActivity</string>
    <string name="title_activity_prueba">Prueba</string>

</resources>
